apollo-router/src/plugins/snapshots/apollo_router__plugins__expose_query_plan__tests__it_doesnt_expose_query_plan.snap
---
source: apollo-router/src/plugins/expose_query_plan.rs
expression: "serde_json::to_value(response).unwrap()"
---
{
  "data": {
    "topProducts": [
      {
        "upc": "1",
        "name": "Table",
        "reviews": [
          {
            "id": "1",
            "product": {
              "name": "Table"
            },
            "author": {
              "id": "1",
              "name": "Ada Lovelace"
            }
          },
          {
            "id": "4",
            "product": {
              "name": "Table"
            },
            "author": {
              "id": "2",
              "name": "Alan Turing"
            }
          }
        ]
      },
      {
        "upc": "2",
        "name": "Couch",
        "reviews": [
          {
            "id": "2",
            "product": {
              "name": "Couch"
            },
            "author": {
              "id": "1",
              "name": "Ada Lovelace"
            }
          }
        ]
      }
    ]
  }
}
